# learn

./: CLAUDE.md  checklist.md  main.py  pyproject.toml  test.py  todo.txt
modules/: activation.py  batchnorm.py  conv.py  gan.py  lstm.py  mlp.py  mobilenet.py  resnet.py  rnn.py
scripts/: gan.py  lstm.py  mobilenet.py  rnn.py
tests/: test_batchnorm.py  test_conv.py  test_mlp.py
